Fix author and pages overflow

--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ html, body, .container {
 }
 
 .card .title,
-.card .description {
+.card .author {
   overflow-wrap: break-word;
   white-space: nowrap;
   overflow: hidden;
@@ -176,6 +176,13 @@ html, body, .container {
 .card .description {
   color: var(--card-sub-text-color);
   font-size: 0.8rem;
+  display: flex;
+  min-width: 0;
+}
+
+.card .pages-container {
+  flex-shrink: 0;
+  margin-left: 0.5ch;
 }
 
 .card .buttons {
